Bug 256230 - KPageWidget has problems when using facetype Tabbed
Summary: KPageWidget has problems when using facetype Tabbed
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-06 15:14 UTC by Robin Atwood
Modified: 2010-11-08 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robin Atwood 2010-11-06 15:14:54 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

I have an app which allows users to choose the FaceType. When the Tabbed mode is used the removePage() function does not work. The KPageWidgetItem seems to be destroyed but the actual tab remains but is blank. Toggling the facetype clears the problem. Bug is not present in List and Tree modes.

Also when in Tabbed mode when clicking on different pages, the currentPageChanged() signal is not sent consistently, they stop being emitted after a few clicks. Again, toggling the facetype clears the problem.

Reproducible: Always

Steps to Reproduce:
Find an app using KPageWidget, change it to use Tabbed FaceType and see for yourself.
Comment 1 Christoph Feck 2010-11-08 16:19:11 UTC
SVN commit 1194291 by cfeck:

Emit layoutChanged when removing page

CCBUG: 256230


 M  +4 -0      kpagewidgetmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194291
Comment 2 Christoph Feck 2010-11-08 16:45:38 UTC
SVN commit 1194298 by cfeck:

Fix currentPageChanged not emitted in Tabbed face mode

Since the selection model is not connected to a real item view,
but only used internally, we need to emulate "single selection"
mode and clear selection whenever we select a new item.

Otherwise, after all items have been selected (in other words,
after all pages have been visited), it would stop emitting a
signal.

CCBUG: 256230


 M  +1 -1      kpageview_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194298
Comment 3 Christoph Feck 2010-11-08 16:50:45 UTC
SVN commit 1194300 by cfeck:

Fix Tabbed face mode (backport of r1194291 and r1194298)

BUG: 256230
FIXED-IN: 4.5.4


 M  +1 -1      kpageview_p.cpp  
 M  +4 -0      kpagewidgetmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194300
Comment 4 Robin Atwood 2010-11-08 18:26:46 UTC
Christoph, well done, that was a very fast fix! I like the service in this joint. :)