Fix Tabbed face mode (backport of r1194291 and r1194298)

BUG: 256230
FIXED-IN: 4.5.4

svn path=/branches/KDE/4.5/kdelibs/; revision=1194300